--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "next": "15.3.0",
     "next-nprogress-bar": "^2.4.7",
     "react": "^19.0.0",
