--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "lottie-react": "^2.4.1",
     "next": "15.3.0",
     "next-nprogress-bar": "^2.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "resend": "^4.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
