--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,6 +13,7 @@
     "lottie-react": "^2.4.1",
     "next": "15.3.0",
     "next-nprogress-bar": "^2.4.7",
+    "next-video": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-type-animation": "^3.2.0",
