--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.3",
     "@heroicons/react": "^2.2.0",
     "framer-motion": "^12.11.0",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.510.0",
     "next": "15.3.0",
     "next-nprogress-bar": "^2.4.7",
     "next-video": "^2.2.0",
