--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-type-animation": "^3.2.0",
+    "react-zoom-pan-pinch": "^3.7.0",
     "resend": "^4.4.1"
   },
   "devDependencies": {
